--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100;200&display=swap"
       rel="stylesheet"
     />
-    <title>Find Image</title>
+    <title>Movies</title>
 
     <script type="text/javascript">
       (function (l) {
